1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* Makefile (check): New rule.

	* TESTPAT: Add batch testing facility.

	* lex.el (lex-use-ccl): Abolished.
	(lex-ccl-execute): New variable.
	(lex-ccl-use-name): New variable.
	(lex-gen-machine): Use `lex-ccl-execute' instead of `lex-use-ccl'.
	(lex-gen-ccl-unibyte-automata): Use `lex-ccl-execute' and
	`lex-ccl-use-name' for generating codes.
	(lex-gen-ccl-unibyte-automata-program): Use `lex-ccl-execute'.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* lex.el (lex-gen-ccel-unibyte-automata-state): Jump start of loop
	on end of states.

1998-08-22  Tanaka Akira      <akr@jaist.ac.jp>

	* TESTPAT: Use `\t' instead of raw TAB character.

	* ew-line.el (ew-crlf-line-generic): Accept bare LF before first CR
	occurence.

	* ew-quote.el: Evaluate constants on byte-compile time.

	* ew-unit.el: Ditto.

	* ew-var.el: Ditto.

	* lex.el: CCL support.
	(lex-use-ccl): New variable.
	(lex-gen-machine): Use `lex-gen-automata' and `lex-gen-action'.
	(lex-gen-automata): New function.
	(lex-gen-action): New function.
	(lex-gen-ccl-unibyte-automata): New function.
	(lex-gen-ccl-unibyte-automata-program): New function.
	(lex-gen-ccl-unibyte-automata-state): New function.

	* natset.el (natset-gen-ccl-branch): New function.
	(natset-gen-ccl-branch-internal): New function.
	(natset-assoc): New function.

1998-08-21  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* TESTPAT: Specify coding-system.

1998-08-21  Tanaka Akira      <akr@jaist.ac.jp>

	* TESTPAT: Change quoted-encoded-word to embedded-encoeded-word.

	* closure.el (closure-make): Closure structure changed.
	(closure-partial-call): New function.
	(closure-call): Support new structure.

	* ew-dec.el (ew-decode-field): Abolish argument `eword-filter'.
	(ew-decode-none): Ditto.
	(ew-decode-generic): Ditto.
	(ew-decode-unstructured-ewords): Ditto.
	(ew-decode-unstructured): Ditto.
	(ew-decode-phrase-ewords): Ditto.
	(ew-decode-phrase): Ditto.
	(ew-decode-comment-ewords): Ditto.